<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="ru.mikov.habittracker.presentation.habit.HabitViewModel" />

    </data>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sv_habit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_habit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_habit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/name_of_habit"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.state.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_habit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_habit_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_habit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={viewmodel.state.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_habit_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:entries="@array/priority"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_habit_description" />

            <TextView
                android:id="@+id/tv_choose_habit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/choose_habit_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_habit_priority" />

            <RadioGroup
                android:id="@+id/rg_habit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_choose_habit_type">

                <RadioButton
                    android:id="@+id/rb_good"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/rb_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bad" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_habit_periodicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_habit_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_habit_periodicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/enter_habit_periodicity"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text="@={viewmodel.state.periodicity}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number_of_executions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_habit_periodicity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number_of_executions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/enter_number_of_executions"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:text="@={viewmodel.state.numberOfExecutions}" />

            </com.google.android.material.textfield.TextInputLayout>


            <HorizontalScrollView
                android:id="@+id/HorizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_number_of_executions">

                <LinearLayout
                    android:id="@+id/llt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hsv_model"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

            <ImageView
                android:id="@+id/iv_selected_color"
                android:layout_width="@dimen/side"
                android:layout_height="@dimen/side"
                android:layout_margin="16dp"
                android:background="@drawable/border_black"
                android:src="@drawable/square"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/HorizontalScrollView"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_hsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hsv_formatted"
                app:layout_constraintLeft_toRightOf="@id/iv_selected_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_selected_color" />


            <TextView
                android:id="@+id/tv_rgb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rgb_formatted"
                app:layout_constraintLeft_toRightOf="@id/iv_selected_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hsv" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/btn_save_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_selected_color" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>