...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_add_24"
            tools:ignore="ContentDescription" />
...
